@@ -1,3 +1,8 @@
+2010-07-08  Xavier Queralt Mateu  <xqueralt@flumotion.com>
+
+	* flumotion/worker/checks/Makefile.am:
+	Add the check to dist
+
 2010-07-07  Andoni Morales Alastruey  <amorales@flumotion.com>
 
 	reviewed by: Marc André Lureau
